objects/HealthCloudGA__CustomLabelConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>HealthCloudGA__NewLabel__c</fullName>
        <label>New Label</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ObjectFieldName__c</fullName>
        <label>Object Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ObjectName__c</fullName>
        <label>Object Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ObjectRecordType__c</fullName>
        <label>Object Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelationshipName__c</fullName>
        <label>Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ViewName__c</fullName>
        <label>View Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Label Config</label>
</CustomObject>